# ASM-Notebook

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  api_main.py  cli.py  cloudbuild.api.yaml  cloudbuild.frontend.yaml  cloudbuild.yaml  db.py  deps.txt  docker-compose.yml  init_db.py  models.py  pyproject.toml  requirements.txt
.continue/: config.yaml
alembic/: env.py
alembic/versions/: 20260224_0001_baseline_schema.py  20260301_0002_auth_and_rate_limits.py  20260302_0003_auth_allowlist.py  20260302_0004_scan_heartbeat.py  20260303_0005_groups_and_assignments.py  20260303_0006_uuid_users_groups.py  20260306_0007_findings_and_preferences.py
asm_notebook/: access_control.py  api.py  api_cli.py  api_main.py  cli.py  db.py  init_db.py  models.py  requirements.txt  security.py
asm_notebook/plugins/: ct.py  dns.py  http_meta.py  ip_intel.py
asm_notebook/services/: company_service.py  cve_service.py  finding_service.py  group_service.py  preference_service.py  scan_service.py  soc_service.py
deploy/: README.md  production.rules.example.json
docs/: API_REFERENCE.md  GCP_MIGRATION_PLAN.md  OPERATIONAL_HANDOFF_NOTES.md  POC_CLOSEOUT_CHECKLIST.md
docs/artifacts/: deepgram_scan10.json  (+1 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
plugins/: ct.py  dns.py  http_meta.py
scripts/: deploy_production.ps1  migrate_sqlite_to_postgres.py  seed_soc_demo.py
tests/: test_api_auth.py  test_api_scans.py  test_findings_and_soc.py  test_security_config.py
(+12 files in other folders)
